--- a/recipes/refriedbeans.html
+++ b/recipes/refriedbeans.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Refried Beans</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/refriedbeans.html">Refried Beans</a></body>
+   <h1>Refried Beans</h1> 
+</body>
 </html>
