--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/refriedbeans.html">Refried Beans</a></body>
+    <ul>
+    <li><a href="recipes/refriedbeans.html">Refried Beans</a></li>
+    <li><a href="recipes/homadetortillas.html">Homeade Flour Tortillas</a></li>
+    <li><a href="recipes/quesofresco.html">Queso Fresco</a></li>
+    </ul>
+</body>
 </html>
