--- a/recipes/refriedbeans.html
+++ b/recipes/refriedbeans.html
@@ -7,5 +7,31 @@
 </head>
 <body>
    <h1>Refried Beans</h1> 
+   <img src='../images/beans.jpeg' alt='beans the magical fruit' style="height:300px; width:300px;" >
+   <h2>Description:</h2>
+   <p>Where have pinto beans been all my life? I dismissed them after a couple of lackluster Mexican restaurant meals, but I’ve recently realized pinto beans in their full glory. They are creamy and rich, and mix in beautifully with scrambled eggs, soup, rice and more.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 tablespoon extra-virgin olive oil</li>
+    <li>½ cup finely chopped yellow or white onion (about ½ small onion)</li>
+    <li>¼ teaspoon fine sea salt</li>
+    <li>2 cloves garlic, pressed or minced</li>
+    <li>½ teaspoon chili powder</li>
+    <li>¼ teaspoon ground cumin</li>
+    <li>2 cans (15 ounces each) pinto beans, rinsed and drained, or 3 cups cooked pinto beans</li>
+    <li>½ cup water</li>
+    <li>2 tablespoons chopped fresh cilantro</li>
+    <li>1 tablespoon lime juice (about ½ medium lime), to taste </li>
+  </ul>
+  <h2>Steps:</h2>
+  <ol>
+    <li>In a medium saucepan over medium heat, warm the olive oil until shimmering. Add the onions and salt. Cook, stirring occasionally, until the onions have softened and are turning translucent, about 5 to 8 minutes.</li>
+    <li>Add the garlic, chili powder and cumin. Cook, stirring constantly, until fragrant, about 30 seconds. Pour in the drained beans and water. Stir, cover and cook for 5 minutes.</li>
+    <li>Reduce the heat to low and remove the lid. Use a potato masher or the back of a fork to mash up about at least half of the beans, until you reach your desired consistency. Continue to cook the beans, uncovered, stirring often, for 3 more minutes.</li>
+    <li>Remove the saucepan from the heat and stir in the cilantro and lime juice. Taste, and add more salt and lime juice if necessary. If the beans seem dry, add a very small splash of water and stir to combine. Cover until you’re ready to serve.</li>
+  </ol>
+  <button><a href="../index.html">Home</a></button>
 </body>
+
+
 </html>
