Tortillas and homepage changes

--- a/recipes/homemadetortillas.html
+++ b/recipes/homemadetortillas.html
@@ -13,16 +13,11 @@
     
    <h2>Ingredients</h2>
   <ul>
-    <li>3 cups all-purpose flour
-    </li>
-    <li>1 teaspoon salt
-    </li>
-    <li>1 teaspoon baking powder
-    </li>
-    <li>⅓ cup extra virgin olive oil, vegetable oil or other fairly neutral flavored oil
-    </li>
-    <li>1 cup warm water</li>
-    
+    <li>3 cups all-purpose flour</li>
+    <li>1 teaspoon salt</li>
+    <li>1 teaspoon baking powder</li>
+    <li>⅓ cup extra virgin olive oil, vegetable oil or other fairly neutral flavored oil</li>
+    <li>1 cup warm water</li>   
   </ul>
   <h2>Steps:</h2>
   <ol>
@@ -35,7 +30,9 @@
     <li>Serve warm or allow to cool for later use. When ready to use, place a slightly damp paper towel in the bottom of a microwave-safe container (with a cover) that will hold the stacked tortillas. Microwave uncovered for 15-30 seconds (start with 15) or until warm, then keep covered to hold heat while serving.</li>
     <li>Store in an airtight container or zippered bag at room temperature for 24 hours or refrigerate for up to 1 week. To freeze, separate tortillas with parchment paper or waxed paper and place in a zippered bag before placing in the freezer.</li>
   </ol>
-  <button><a href="../index.html">Home</a></button>
+  <button><a href="../index.html">Home</a></button><br>
+  <button><a href="./quesofresco.html">Queso</a></button><button><a href="./refriedbeans.html">Beans</a></button>
+
 </body>
 
 
