--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <img src='./images/bandera.jpeg' alt='mexican flag in heart' style="height:300px; width:300px;" ><br>
+   <ul>
     <li><a href="recipes/refriedbeans.html">Refried Beans</a></li>
     <li><a href="recipes/homadetortillas.html">Homeade Flour Tortillas</a></li>
     <li><a href="recipes/quesofresco.html">Queso Fresco</a></li>
     </ul>
+    
 </body>
 </html>
