--- a/recipes/refriedbeans.html
+++ b/recipes/refriedbeans.html
@@ -30,7 +30,9 @@
     <li>Reduce the heat to low and remove the lid. Use a potato masher or the back of a fork to mash up about at least half of the beans, until you reach your desired consistency. Continue to cook the beans, uncovered, stirring often, for 3 more minutes.</li>
     <li>Remove the saucepan from the heat and stir in the cilantro and lime juice. Taste, and add more salt and lime juice if necessary. If the beans seem dry, add a very small splash of water and stir to combine. Cover until you’re ready to serve.</li>
   </ol>
-  <button><a href="../index.html">Home</a></button>
+  <button><a href="../index.html">Home</a></button><br>
+  <button><a href="./quesofresco.html">Queso</a></button><button><a href="./homemadetortillas.html">Tortillas</a></button>
+
 </body>
 
 
