Tortillas html name changed to homemade not homade

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src='./images/bandera.jpeg' alt='mexican flag in heart' style="height:300px; width:300px;" ><br>
    <ul>
     <li><a href="recipes/refriedbeans.html">Refried Beans</a></li>
-    <li><a href="recipes/homadetortillas.html">Homeade Flour Tortillas</a></li>
+    <li><a href="recipes/homemadetortillas.html">Homeade Flour Tortillas</a></li>
     <li><a href="recipes/quesofresco.html">Queso Fresco</a></li>
     </ul>
     
